Changelog
=========

2.1 (unreleased)
----------------

- Updated German translation.
  [href]


2.0 (2013-10-29)
----------------

- Change package layout
  [gborelli]

- Re-adds previously used maxResolution and maxExtent options, fixing issues
  with certain WMTS services. [href]


2.0b1 (2013-06-02)
------------------

- move IGeoCoder utility from c.geo.mapwidget
  [gborelli]

- Prevent multiple inclusions of Google maps and Bing javascripts
  [gborelli]

- Moved Openlayers localization to geosettings_view
  [gborelli]

- Added ShapeDisplayLayer
  [gborelli]

- Documented javascript files with http://abstract-open-solutions.github.io/code-illuminated/
  [gborelli]

- Refactored collectivegeo javascript
  [gborelli]

- Moved static resource to static directory
  [gborelli]

- Removed all Yahoo maps references. See: collective.geo.bundle #19
  [gborelli]

- Removed YahooStreetMapLayer, YahooSatelliteMapLayer, YahooHybridMapLayer
  and relative templates
  [gborelli]

- Removed yahoomaps, yahooapi, yahoo_maps_js from collective geo macros
  [gborelli]

- Added c.z3cform.colorpicker profile in metadata.xml. Now we depend on
  c.z3cform.colorpicker > 0.2
  [gborelli]

- Added ShapeMapWidget and ShapeEditLayer and theirs respective adapters
  [gborelli]


1.6 (2013-01-29)
----------------

- added travs-ci configuration [gborelli]
- refactored tests with plone.app.testing [gborelli]
- removed tests.base module [gborelli]
- removed imports from zope.app [gborelli]
- Changed control panel form in order to make it more user friendly [gborelli]
- Fixed translation domain in the collectivegeo_macros [rnd0101]
- Allowed OSM and overlay URL helper functions to take into account
  zoomOffset.
  [davidjb]
- Ensuring that the maxExtent for spherical mercator covers all coordinates.
  [davidjb]
- Automatically include OpenLayers language files if the language is
  supported by OpenLayers [href]
- Added German translation [href]